mobile querie fixed height and overflow

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     height: 100%;
     width: 100%;
     margin: 0;
-    overflow: hidden;
+
 }
 
 /* Fondo dinámico tipo carrusel */
@@ -155,9 +155,18 @@ body {
 @media screen and (max-width: 500px) {
     .container {
         flex-direction: column;
+        height: auto;
+    }
+
+
+    .title {
+        font-size: 24px;
+        text-align: center;
+        margin-bottom: -20px;
     }
 
     .left-panel {
+        display: block;
         width: 100%;
         height: auto;
         padding: 40px 20px;
